ChangeLog for the Qt GUI to Astrophotography

20190914:
	* remove some warnings
	* fix bug in target drawing
	* fix seg fault in SkyDrawing (caused by constellation labels)

20190913:
	* add Button for time offset to SkyDisplayWidget
	* create RotateButton and OffsetButton classes to display current
	  values

20190911:
	* add a rotation dial to SkyDisplayWidget
	* add rotation to SkyDrawing
	* fix MilkyWay outlines for certain angles

20190909:
	* fix a bug in the milkyway drawing code
	* add constellation labels
	* reimplement constellation drawing
	* fix display of milkyway
	* add pole letter display

20190908:
	* add configurable labels to astrosky
	* add --verbose to astrosky
	* fix --help option in astrosky
	* draw MilkyWay in the SkyDrawing class

20190904:
	* add tooltips (don't work when generated from QtCreator)
	* fix orientation of CalibrationDisplay
	* add Labels to guiderbuttons

20190903:
	* better buttons in calculator dialog
	* add dec rate spinbox in CalibrationCalculatorDialog
	* make scales of both axes equal in ClibrationDisplayWidget
	* fix initialization of west button in calibrationcalculator
	* allow to open configuration directly from message box warning
	  about time descrepancy
	* make sure only one configuration or events window can be created
	  from the main window

20190902:
	* fix center computation for crosshairs

20190823:
	* improve structure of textChanged in catalogdialog.cpp
	* fix textChanged in catalogdialog.cpp

20190822:
	* fix data types for deep sky object catalogs
	* fix bug that displayed objects from the other side of the
	  celestial sphere in the StarChartWidget
	* add flip-option to the StarChartWidget

20190624:
	* add openmp to compilation

20160727:
	* project started